# spotify-atlas

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  explore.py
backend/: audit_artist_leakage.py  audit_artist_leakage_v2.py  audit_cluster0_breakdown.py  audit_drake_weeknd_dl.py  era_dry_run_output.txt  era_dry_run_v2.txt  explore.py  fix_cache.py  listening_eras_audit.txt  pyproject.toml  schema_check.py
backend/alembic/: env.py
backend/alembic/versions/: 041ada278e1f_add_track_vibe_coordinates.py  10d5a4524dd6_add_canonical_name_to_cluster_labels.py  465ceeec1e2f_add_source_run_id_and_cluster_layer_to_.py  476868b9ab11_phase20b_fix_user_eras_unique_.py  4c9c1b7cde2b_add_pure_prose_document.py  540d3b8f7ca6_vibe_centroids_soft_assignment.py  6658dea28781_add_clustering_experiment_tables.py  719211852fb8_add_image_url_to_albums_and_artists.py  7363dcbd4926_fix_cluster_labels_unique_constraint_to_.py  943bdd182e63_phase20_extended_history_columns.py  a3f8c2e91d04_phase12_user_eras_era_detection.py  a67a4d9d1c2e_phase20b_era_type_two_timeline.py  b1bbd08881ab_add_cluster_archetype_to_cluster_labels.py  b4e9d3f82a15_phase13_era_labels.py  c06bfccde289_ml2d_audio_features_and_vibe_columns.py  (+5 more)
backend/app/: main.py
backend/scripts/: backfill_album_images_oembed.py  backfill_artist_images_oembed.py  backfill_checkpoint.json  backfill_images.py  backfill_priority_images.py  oembed_album_checkpoint.json  oembed_artist_checkpoint.json  run_archetype_updates.py  test_layer_endpoints.py  test_rarity.py  update_archetype_names.sql
frontend/lib/: api.ts  (+2 more)
(+111 files in other folders)
