[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "hdbscan>=0.8.44",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "umap-learn>=0.5.12",
    "uvicorn>=0.49.0",
]
